# tinyos

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
apps/: Cargo.toml  link.ld
apps/.cargo/: config.toml
apps/clock/: Cargo.toml
apps/edit/: Cargo.toml
apps/greet/: Cargo.toml
apps/heartbeatd/: Cargo.toml
apps/hello/: Cargo.toml
apps/pixels/: Cargo.toml
apps/progress/: Cargo.toml
apps/solitaire/: Cargo.toml  genglyphs.swift
apps/solitaire/src/: glyphs.rs  lib.rs  main.rs  view.rs
kernel/: Cargo.toml
kernel/src/: logger.rs  main.rs  smoke.rs  svc.rs
kernel/src/apps/: clock.rs  editor.rs  mod.rs  monitor.rs  notes.rs  terminal.rs  vi.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: context.rs  exceptions.rs  gic.rs  irq.rs  mod.rs  paging.rs  smp.rs  timer.rs  uaccess.rs  user.rs
kernel/src/arch/x86_64/: apic.rs  context.rs  exceptions.rs  io.rs  irq.rs  mod.rs  paging.rs  smp.rs  timer.rs  uaccess.rs  user.rs
kernel/src/drivers/: fwcfg.rs  input.rs  mmio.rs  mod.rs  pci.rs  virtio.rs  virtio_blk.rs  virtioblk.rs
kernel/src/fs/: fat.rs  mod.rs  server.rs  service.rs
kernel/src/gfx/: font.rs  mod.rs  surface.rs
kernel/src/mem/: frames.rs  mod.rs
kernel/src/sched/: mod.rs  thread.rs  waitq.rs
kernel/src/term/: mod.rs
kernel/src/ui/: cursor.rs  desktop.rs  mod.rs  splash.rs  textview.rs  wallpaper.rs
kernel/src/ui/shell/: app.rs  calc.rs  clockpill.rs  dock.rs  extern_app.rs  icons.rs  lockscreen.rs  mod.rs  palette.rs  quick.rs  statusbar.rs  svc.rs  tokens.rs  wallpaper.rs
vicore/: Cargo.toml
(+122 files in other folders)
