[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.35", default-features = false }
linked_list_allocator = "0.10"
spin = "0.9"
log = "0.4"
fontdue = { version = "0.9", default-features = false, features = ["hashbrown"] }
libm = "0.2"
tinyfs = { path = "../crates/tinyfs" }
abi = { package = "tinyos-abi", path = "../crates/abi" }
